--- a/src/assets/styles/components/Header.scss
+++ b/src/assets/styles/components/Header.scss
@@ -1,4 +1,4 @@
-.header {
+.header, .greenHeader {
   align-items: center;
   background: #8f57fd;
   color: white;
@@ -7,6 +7,9 @@
   justify-content: space-between;
   top: 0px;
   width: 100%;
+}
+.greenHeader {
+  background-color: #21C08B;
 }
 
 .header__img {
@@ -54,4 +57,6 @@
 .header__menu--profile img {
   margin-right: 8px;
   width: 40px;
+  border-radius: 50%;
+  object-fit: cover;
 }
